--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>group1.project12group1/group1.project12group1.Visualizer</mainClass>
+                            <mainClass>group1.project12group1/GUI.Visualizer</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
