hopefully this is not seen in github if everything works fine

--- a/pom.xml
+++ b/pom.xml
@@ -119,7 +119,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>code.Main</mainClass>
+                            <mainClass>code.NasaRunner</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
